2002-08-21  Werner Koch  <wk@gnupg.org>

	* pubkey.c: Enable keygrip calculation for "openpgp-rsa".

2002-08-17  Werner Koch  <wk@gnupg.org>

	* cipher.c (setup_cipher_table): Don't overwrite the DES entry
	with the entry for DUMMY.

2002-08-14  Werner Koch  <wk@gnupg.org>

	* des.c (do_des_setkey,do_des_encrypt, do_des_decrypt): New.
	(_gcry_des_get_info): Support plain old DES.
	* cipher.c (setup_cipher_table): Put DES into the table.

2002-07-25  Werner Koch  <wk@gnupg.org>

	* rndunix.c (_gcry_rndunix_constructor): Prefixed with _gcry_.
	Noted by Stephan Austermuehle.

2002-07-08  Timo Schulz  <ts@winpt.org>

	* rndw32.c: Replaced the m_ memory functions with the real 
	gcry_ functions. Renamed all g10_ prefixed functions to log_.
	
2002-06-12  Werner Koch  <wk@gnupg.org>

	* rsa.c (generate): Use e = 65537 for now.

2002-06-11  Werner Koch  <wk@gnupg.org>

	* pubkey.c (gcry_pk_get_keygrip): Allow a "protected-private-key".

2002-06-05  Timo Schulz  <ts@winpt.org>

	* cipher.c (gcry_cipher_encrypt, gcry_cipher_decrypt):
	Check that the input size is a multiple of the blocksize.
	
2002-05-23  Werner Koch  <wk@gnupg.org>

	* md.c (oid_table): Add an rsadsi OID for MD5.

2002-05-21  Werner Koch  <wk@gnupg.org>

	* primegen.c, elgamal.c, dsa.c (progress): Do not print anything
	by default.  Pass an extra identifying string to the callback and
	reserved 2 argumenst for current and total counters.  Changed the
	register function prototype.

2002-05-17  Werner Koch  <wk@gnupg.org>

	* rndegd.c (rndegd_constructor): Fixed name of register function
	and prefixed the function name with _gcry_.
	* rndw32.c (rndw32_constructor): Ditto.
	* tiger.c (tiger_constructor): Ditto.

	* Makefile.am: Removed all dynamic loading stuff.
	* dynload.c: Ditto. Now only used for the constructor system.

2002-05-15  Werner Koch  <wk@gnupg.org>

	* random.c (gcry_random_bytes,gcry_random_bytes_secure)
	(gcry_randomize): Make sure we are initialized.

2002-05-14  Werner Koch  <wk@gnupg.org>
